[package]
name = "halo2-merkle-proof"
version = "0.1.0"
edition = "2021"

[lib]
name = "merkle_proof"
path = "src/lib.rs"


[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]


[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "a898d65ae3ad3d41987666f6a03cfc15edae01c4"}
plotters = { version = "0.3.0", optional = true }
rand = "0.8.5"
rand_core = { version = "0.6", default-features = false }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev.dependencies]
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

